[package]
name = "gpt_jpn_eng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chatgpt_rs = { version = "1.2.0", features = ["streams"] }
dotenvy = "0.15.7"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }

